# copyshaders

./: CMakeLists.txt
src/lib/: CMakeLists.txt  shadercompiler.cpp
